@@ -1,5 +1,6 @@
-rev 13-Dec_28-10_38
+rev 14-Jan_07-20_48
 
+6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
 2.6.6 is the final FCKeditor before the change-over to CKeditor.  The upgrade required bringing the ie and gecko 
 javascript files into sync, in particular so that the image and link dialogs open to a larger size.
@@ -306,3 +307,10 @@ Removed unintentional _FCKG_BLANK_TD_markers
 
 15 Dec
 Remove ~~COMPLEX_TABLES~~ macro in save.php and disable macro checkbox if complex set in config manager
+
+-------- 2014 --------
+Fixed bug in handling of rss feed syntax that inserted initial italic markup following feed markup.
+Fixed parsing and output of Dokuwiki quote syntax
+
+7 Jan 2014
+Rewrote Non Parsed Block handling (edit.php pre-processor).
